--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-full">
 
 <head>
     <meta charset="UTF-8">
@@ -7,39 +7,77 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://unpkg.com/vue@3"></script>
-    <style>
-        html,
-        body {
-            height: 100%;
-        }
-
-        body {
-            display: grid;
-            place-items: center;
-        }
-
-        .text-red {
-            color: red;
-        }
-
-        .text-green {
-            color: green;
-        }
-    </style>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body>
+<body class="h-full grid place-items-center">
 
     <div id="app">
+        <section>
+            <h2 v-show="inProgressAssignments.length" class="font-bold mb-2">In Progress</h2>
 
-        <button :class="active ? 'text-red' : 'text-green'" @click="toggle">Click Me</button>
+            <ul>
+                <li 
+                    v-for="assignment in inProgressAssignments" 
+                    :key="assignment.id"
+                >
+                    <label for="">
+                        {{ assignment.name }}
+
+
+                        <input type="checkbox" v-model="assignment.complete">
+                    </label>
+                </li>
+            </ul>
+
+        </section>
+
+        <section v-show="completedAssignments.length" class="mt-8">
+            <h2 class="font-bold mb-2">Completed</h2>
+
+            <ul>
+                <li 
+                    v-for="assignment in completedAssignments" 
+                    :key="assignment.id"
+                >
+                    <label for="">
+                        {{ assignment.name }}
+
+
+                        <input type="checkbox" v-model="assignment.complete">
+                    </label>
+                </li>
+            </ul>
+
+        </section>
 
     </div>
 
     <script>
-        Vue.createApp({
-            
-        }).mount('#app');
+        let app = {
+            data() {
+                return {
+                    assignments: [
+                        { name: 'Finish Project', complete: false, id: 1 },
+                        { name: 'Read Chapter 4', complete: false, id: 2 },
+                        { name: 'Turn in Homework', complete: false, id: 3 },
+                    ]
+                }
+            },
+
+            computed: {
+                inProgressAssignments() {
+                    return this.assignments.filter(assignment => ! assignment.complete)
+                },
+
+                completedAssignments() {
+                    return this.assignments.filter(assignment => assignment.complete)
+                }
+
+            }
+        }
+
+        Vue.createApp(app).mount('#app');
     </script>
 
 </body>
