--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
 </head>
 
-<body class="h-full grid place-items-center">
+<body class="h-full grid place-items-center bg-gray-800 text-white">
 
     <div id="app">
         
